--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.4.0",
     "bootstrap": "^4.5.3",
+    "cors": "^2.8.5",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "socket.io-client": "^3.0.3",
     "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
   },
