--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-   "start": "concurrently \"nodemon server \" \"cd client && npm start\""
-
+    "start": "concurrently \"nodemon server \" \"cd client && npm start\""
   },
   "keywords": [],
   "author": "",
@@ -13,6 +12,7 @@
   "dependencies": {
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "socket.io": "^3.0.3"
   },
   "devDependencies": {
